<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_runtime</name>
  <version>0.0.0</version>
  <description>Canonical ROS2 runtime package for xArm tracking, servo control, and simulation or hardware backends.</description>
  <maintainer email="saaketh1001@gmail.com">saake</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>python3-dotenv</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-serial</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
