<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_tuning_tools</name>
  <version>0.0.0</version>
  <description>Compatibility package for xArm ROS2 tuning helpers.</description>
  <maintainer email="saaketh1001@gmail.com">saake</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>xarm_runtime</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
