<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xarm_gazebo_sim</name>
  <version>0.0.0</version>
  <description>Development-only Gazebo wiring for the xArm ROS2 stack (excluded from Jetson deploy footprint).</description>
  <maintainer email="saaketh1001@gmail.com">saake</maintainer>
  <license>UNLICENSED</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xarm_runtime</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
